# dask4dvc

./: .gitignore  .pre-commit-config.yaml  README.md  dask4dvc.yaml  pyproject.toml
.github/workflows/: pytest.yaml
dask4dvc/: __init__.py  dvc_handling.py  dvc_queue.py  dvc_repro.py  methods.py  typehints.py
dask4dvc/cli/: __init__.py  main.py  methods.py
dask4dvc/utils/: __init__.py  config.py  dask.py  dvc.py  git.py  graph.py  main.py
tests/: conftest.py  examples.py  test_cli.py  test_dask4dvc.py  test_dvc_handling.py  test_i_dask4dvc.py  test_repro.py  test_run.py  test_utils.py  test_utils_dvc.py
