[tool.poetry]
name = "dask4dvc"
version = "0.1.0"
description = "Use dask to run the DVC graph"
authors = ["zincwarecode <zincwarecode@gmail.com>"]
license = "Apache-2.0"
keywords=["data-science", "HPC", "dask", "DVC"]
readme = "README.md"

[tool.poetry.urls]
repository = "https://github.com/zincware/dask4dvc"

[tool.poetry.dependencies]
python = "^3.8"
dask = "^2022.7.1"
distributed = "^2022.7.1"
dask-jobqueue = "^0.8.1"
dvc = "^2.15.0"
typer = "^0.6.1"


[tool.poetry.scripts]
dask4dvc = 'dask4dvc.cli.main:app'

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.4.4"
black = "^22.6.0"
isort = "^5.10.1"
ruff = "^0.0.126"
pytest = "^7.1.2"
pytest-xdist = "^2.5.0"
coverage = "^6.4.2"
pre-commit = "^2.20.0"
zntrack = {git = "https://github.com/zincware/ZnTrack.git"}
pylint = "^2.15.5"
znlib = {extras = ["zntrack"], version = "^0.1.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 90
preview = true

[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.ruff]
line-length = 90

select = ["E", "F", "D", "N", "C", "ANN"]
extend-ignore = [
    "D213", "D203"
]